syntax = "proto3";

// 指明生成的 rust 代码的文件名
// 可以在形如 target/debug/build/grpc-xxx/out/chat.rs 的路径下发现生成的 rust 代码文件
package chat;

message ChatRequest {
  string message = 1;
}

message ChatResponse {
  string message = 1;
}

service Chat {
  // Unary
  rpc UnaryChat(ChatRequest) returns (ChatResponse) {}
}